--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,7 @@ crashlytics-build.properties
 
 ### Keep folder _ProjectMain ###
 # Ignore the entire asset first
-#/Assets/*
+/Assets/*
 
 # Turn on _projectmain and subfolders/files inside
 !Assets/_ProjectMain/
